login sign up added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify - Web Player: Music for everyone</title>
+    <title>Music Player Web App - Web Player: Music for everyone</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/utilities.css">
 </head>
@@ -19,7 +19,7 @@
                 <img class="invert" width="30"src="img/close.svg" alt="">
             </div>
             <div class="home margin bg-grey radius p-1">
-                <img class="invert" width="120" src="img/logo.svg" alt="logo">
+                <!-- <img class="invert" width="120" src="img/logo.svg" alt="logo"> -->
                 <ul>
                     <li><img class="invert" src="img/home.svg" alt="home">Home</li>
                     <li><img class="invert" src="img/search.svg" alt="search">Search</li>
@@ -77,13 +77,14 @@
                 </div>
                 </div>
                 <div class="button">
-                    <button class="signup">Sign up</button>
-                    <button class="login">Log in</button>
+                    <button class="signup"><a href="/signup.html"> Sign Up</a></button></button>
+                    <button class="login"><a href="/login.html"> Log in</a></button>
                 </div>
             </div>
             <div class="spotifyPlaylist">
                 <h2>
-                    Spotify Playlist
+                    <!-- Spotify Playlist -->
+                    Playlist
                 </h2>
                 <div class="cardContainer">
                     
