changes in login page

--- a/signup.html
+++ b/signup.html
@@ -22,6 +22,9 @@
             <label for="pass">Password</label>
             <input type="password" name="pass0" id="pass">
             <button>Sign Up</button>
+            <div class="end">
+                <span>Already have an Account? <a href="login.html">Log In</a></span>
+            </div>
         </div>
     </div>
 </body>
