--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img class="invert" width="30"src="img/close.svg" alt="">
             </div>
             <div class="home margin bg-grey radius p-1">
-                <!-- <img class="invert" width="120" src="img/logo.svg" alt="logo"> -->
+                <img class="invert" width="120" src="img/logo.svg" alt="logo">
                 <ul>
                     <li><img class="invert" src="img/home.svg" alt="home">Home</li>
                     <li><img class="invert" src="img/search.svg" alt="search">Search</li>
