--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
         </div>
         <div class="container-login">
             <label for="email">Email ID</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" placeholder="name@domain.com">
             <label for="pass">Password</label>
             <input type="password" name="pass0" id="pass">
             <button>Log In</button>
