--- a/signup.html
+++ b/signup.html
@@ -16,9 +16,9 @@
         </div>
         <div class="container-login">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name">
+            <input type="text" name="name" id="name" placeholder="For eg: Naman">
             <label for="email">Email ID</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" placeholder="name@domain.com">
             <label for="pass">Password</label>
             <input type="password" name="pass0" id="pass">
             <button>Sign Up</button>
