--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/utilities.css">
+    <link rel="shortcut icon" href="favicon2.ico" type="image/x-icon">
     <title>Log In- Music Player</title>
     
 </head>
